--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.11.3",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "passport": "^0.2.2",
